feat: implement backend robot command infrastructure with WebSocket integration for ESP32 communication